<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aman.app.settings.ProfileActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/Activity_theme"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/profile_title"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:onClick="gocencal"
        android:background="@color/Activity_theme"
        android:src="@drawable/close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:hint="A"
        android:textSize="55dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />



    <LinearLayout
        android:id="@+id/signin_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/img_profile_image">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signin_data_tv"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_signin_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="?attr/colorOnSecondary"
            android:paddingLeft="20dp"
            android:gravity="start"
            android:hint="@string/name_tv"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/tv_sigin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="20dp"
            android:gravity="start"
            android:textColor="?attr/colorOnSecondary"
            android:hint="@string/password_tv"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>