<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".baseactivitys.HomeActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/Activity_theme"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/title_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/home_title"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcome_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_keys"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/texview1" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/title_linear_layout"
        android:layout_width="100dp"
        android:layout_height="125dp"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:contentDescription="@string/keys_logo"
            android:src="@drawable/keys_logs" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="-20dp"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:text="@string/keys"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="590dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:clickable="true" />
    </ScrollView>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_back"
        android:contentDescription="@string/FAB_item"
        android:text="@string/item"
        android:layout_marginBottom="-10dp"
        app:hoveredFocusedTranslationZ="6dp"
        app:icon="@drawable/add"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:pressedTranslationZ="12dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_alarm_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/button_back"
        android:contentDescription="@string/FAB_item"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@id/ExtendedFloatingActionButton"
        app:layout_constraintRight_toRightOf="@id/ExtendedFloatingActionButton"
        app:srcCompat="@drawable/add" />

    <TextView
        android:id="@+id/tv_add_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/add_password_tv"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/add_alarm_fab"
        app:layout_constraintRight_toLeftOf="@id/add_alarm_fab"
        app:layout_constraintTop_toTopOf="@id/add_alarm_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_person_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/button_back"
        android:contentDescription="@string/FAB_item"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/add_alarm_fab"
        app:layout_constraintRight_toRightOf="@id/add_alarm_fab"
        app:srcCompat="@drawable/create" />

    <TextView
        android:id="@+id/tv_pass_gen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/password_genrator_tv"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/add_person_fab"
        app:layout_constraintRight_toLeftOf="@id/add_person_fab"
        app:layout_constraintTop_toTopOf="@id/add_person_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/show_personal_info_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/button_back"
        android:contentDescription="@string/FAB_item"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/add_person_fab"
        app:layout_constraintRight_toRightOf="@id/add_alarm_fab"
        app:srcCompat="@drawable/perm_identity" />

    <TextView
        android:id="@+id/tv_personal_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="Notes"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/show_personal_info_fab"
        app:layout_constraintRight_toLeftOf="@id/show_personal_info_fab"
        app:layout_constraintTop_toTopOf="@id/show_personal_info_fab" />
    <!--    TODO Check 2 Add Personal Info Feature insted of Profile and move Profile to Setting-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Activity_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nevigation_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>
