<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aman.base.TabLayoutActivity">

    <LinearLayout
        android:id="@+id/ll_toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="100"
        android:background="@drawable/rounded_thems1"
        android:elevation="-40dp"
        android:isScrollContainer="false"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_weight="60"
            android:fontFamily="@font/aclonica"
            android:text="@string/home_title"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_keys_icon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="40"
            android:layout_margin="10dp"
            android:contentDescription="@string/keys_logo"
            android:src="@drawable/keys_privacy"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        style="@style/Widget.MaterialComponents.TabLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:elevation="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tabSelectedTextColor="@color/accent">


        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/home"
            android:text="Home" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/chat"
            android:text="Chat" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/settings"
            android:text="Setting" />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/settings"
            android:text="Setting" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="55dp"
        android:contentDescription="@string/Vp_contaner"
        app:layout_constraintTop_toBottomOf="@id/ll_toolbar" />

    <LinearLayout
        android:id="@+id/ll_fab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:translationZ="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:translationZ="15dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_fab2"
        app:layout_constraintRight_toRightOf="@id/guideline_end">

        <TextView
            android:id="@+id/tv_add_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:text="Notes"
            android:textColor="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_note_fab"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/FAB_item"
            app:fabSize="normal"
            app:srcCompat="@drawable/note_add" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:translationZ="15dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_fab3"
        app:layout_constraintRight_toRightOf="@id/guideline_end">

        <TextView
            android:id="@+id/tv_pass_gen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:text="@string/password_genrator_tv"
            android:textColor="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/password_gen_fab"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/FAB_item"
            app:fabSize="normal"
            app:srcCompat="@drawable/create" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_fab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:translationZ="15dp"
        app:layout_constraintBottom_toTopOf="@+id/ex_fab"
        app:layout_constraintRight_toRightOf="@id/guideline_end">

        <TextView
            android:id="@+id/tv_add_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:text="@string/add_password_tv"
            android:textColor="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_password_fab"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/FAB_item"
            app:fabSize="normal"
            app:srcCompat="@drawable/add" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_fab4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:translationZ="15dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintRight_toRightOf="@id/guideline_end">

        <TextView
            android:id="@+id/tv_add_contact_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:text="@string/add_password_tv"
            android:textColor="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_contact_email_fab"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/FAB_item"
            app:fabSize="normal"
            app:srcCompat="@drawable/add" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/ex_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/FAB_item"
        android:text="@string/item"
        android:translationZ="15dp"
        android:visibility="visible"
        app:icon="@drawable/add"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:pressedTranslationZ="12dp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/ex_fab_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/FAB_item"
        android:text="@string/Notes"
        android:visibility="invisible"
        app:hoveredFocusedTranslationZ="6dp"
        app:icon="@drawable/add"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:pressedTranslationZ="12dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="65dp" />

</androidx.constraintlayout.widget.ConstraintLayout>